Tests feasibility of using MTA API for seed data.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>ME-75</title>
   </head>
   <body>
@@ -11,6 +12,13 @@
     </header>
 
     <div id="button"></div>
+
+    <button id="arp">Start</button>
+
+    <input type="range"
+            min=27
+            max=4200
+            id="frequency" />
 
     <footer>
       <script src="./scripts/bundle.js"></script>
