Adds blank voices to the DOM automatically.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="./styles/master.css" />
     <title>ME-75</title>
   </head>
   <body>
@@ -11,7 +12,10 @@
       <h1>ME-75</h1>
     </header>
 
-    <div id="button"></div>
+    <nav class="main-controls">
+      <button id="add-voice">Add New Voice</button>
+      <section id="voices"></section>
+    </nav>
 
     <button id="arp">Start</button>
 
