Adds volume control to voice widget.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <h1>ME-75</h1>
     </header>
 
+    <div class="transport-controls">
+      <button id="start-transport">Play</button>
+      <button id="stop-transport">Stop</button>
+    </div>
+
     <main class="all-voices">
       <section id="bass">
         <button value="bass" id="add-bass">Add Bass</button>
