Adds name to melody functionality. Begins redesign of app for static choir.

--- a/index.html
+++ b/index.html
@@ -15,28 +15,26 @@
 
     <div class="transport-controls">
       <button id="start-transport">Play</button>
-      <button id="stop-transport">Stop</button>
+      <button id="stop-transport">Clear</button>
     </div>
 
     <main class="all-voices">
       <section id="bass">
-        <button value="bass" id="add-bass">Add Bass</button>
+        <div value="bass" id="add-bass">Add Bass</div>
       </section>
       <section id="baritone">
-        <button value="baritone" id="add-baritone">Add Baritone</button>
+        <div value="baritone" id="add-baritone">Add Baritone</div>
       </section>
       <section id="tenor">
-        <button value="tenor" id="add-tenor">Add Tenor</button>
+        <div value="tenor" id="add-tenor">Add Tenor</div>
       </section>
       <section id="alto">
-        <button value="alto" id="add-alto">Add Alto</button>
+        <div value="alto" id="add-alto">Add Alto</div>
       </section>
       <section id="soprano">
-        <button value="soprano" id="add-soprano">Add Soprano</button>
+        <div value="soprano" id="add-soprano">Add Soprano</div>
       </section>
     </main>
-
-    <button id="arp">Start</button>
 
     <footer>
       <script src="./scripts/bundle.js"></script>
