Improves CSS and general layout.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,6 @@
   </head>
   <body>
 
-
-    <div class="rack-element">
-      <h2></h2>
-      <div class="sub-rack">
-        <div class="rack-knob">
-          dial
-          <h3></h3>
-        </div>
-      </div>
-    </div>
-
-
-
     <header>
       <h1>ME-75</h1>
     </header>
@@ -34,108 +21,112 @@
         <button class="create-melody">Play my name!</button>
       </form>
 
-      <div class="transport">
-        <div class="transport-control" id="play-btn"></div>
-      </div>
-
       <div class="synth-container">
 
         <div class="synth-header">
-          <div class="title">
-            <h1 class="synth-name">ME-75</h1>
+          <div class="rack-element header-knob">
+            <h2>PLAY</h2>
+            <div class="transport-control" id="play-btn"></div>
           </div>
           <div id="oscilloscope" class="oscilloscope"></div>
-        </div>
-
-        <section class="audio-rack vol-osc">
-          <div class="rack-element">
+          <div class="rack-element header-knob">
             <h2>VOLUME</h2>
             <div id="volume" class="volume knob"></div>
           </div>
-          <div class="rack-element wave-selector">
-            <h2>OSCILLATOR</h2>
-            <div id="waveform" class="wave-selector"></div>
-            <ul class="radio-labels">
-              <li>sawtooth</li>
-              <li>triangle</li>
-              <li>square</li>
-              <li>sine</li>
-            </ul>
-          </div>
-        </section>
+        </div>
 
-        <section class="audio-rack">
-
-          <div class="rack-element">
-            <h2>EQUALIZER</h2>
-            <div class="eq sub-rack">
-              <div class="rack-knob">
-                <div id="lowLevelEq" class="eq knob"></div>
-                <h3>low</h3>
-              </div>
-              <div class="rack-knob">
-                <div id="midLevelEq" class="eq knob"></div>
-                <h3>mid</h3>
-              </div>
-              <div class="rack-knob">
-                <div id="highLevelEq" class="eq knob"></div>
-                <h3>high</h3>
+        <div class="control-panel">
+          <section class="rack-row">
+            <div class="rack-element wave-selector">
+              <h2>OSCILLATOR</h2>
+              <div id="waveform" class="wave-selector"></div>
+              <ul class="radio-labels">
+                <li>sawtooth</li>
+                <li>triangle</li>
+                <li>square</li>
+                <li>sine</li>
+              </ul>
+            </div>
+            <div class="rack-element">
+              <h2>EQUALIZER</h2>
+              <div class="eq sub-rack">
+                <div class="rack-knob">
+                  <div id="lowLevelEq" class="eq knob"></div>
+                  <h3>low</h3>
+                </div>
+                <div class="rack-knob">
+                  <div id="midLevelEq" class="eq knob"></div>
+                  <h3>mid</h3>
+                </div>
+                <div class="rack-knob">
+                  <div id="highLevelEq" class="eq knob"></div>
+                  <h3>high</h3>
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="rack-element">
-            <h2>COMPRESSOR</h2>
-            <div class="compressor sub-rack">
-              <div class="rack-knob">
-                <div id="threshold" class="compressor knob"></div>
-                <h3>threshold</h3>
-              </div>
-              <div class="rack-knob">
-                <div id="ratio" class="compressor knob"></div>
-                <h3>ratio</h3>
-              </div>
-            </div>
-          </div>
-
-        </section>
-
-        <section class="audio-rack">
-
-          <div class="rack-element">
-            <h2>FILTERS</h2>
-            <div class="sub-rack">
-              <div class="rack-knob">
-                <div id="lowpass" class="filter knob"></div>
-                <h3>lowpass</h3>
-              </div>
-              <div class="rack-knob">
-                <div id="highpass" class="filter knob"></div>
-                <h3>highpass</h3>
+            <div class="rack-element">
+              <h2>COMPRESSOR</h2>
+              <div class="compressor sub-rack">
+                <div class="rack-knob">
+                  <div id="threshold" class="compressor knob"></div>
+                  <h3>threshold</h3>
+                </div>
+                <div class="rack-knob">
+                  <div id="ratio" class="compressor knob"></div>
+                  <h3>ratio</h3>
+                </div>
               </div>
             </div>
-          </div>
+          </section>
 
-          <div class="rack-element">
-            <h2>TIMING</h2>
-            <div class="sub-rack">
-              <div class="rack-knob">
-                <div id="attack" class="att-del knob"></div>
-                <h3>attack</h3>
-              </div>
-              <div class="rack-knob">
-                <div id="release" class="att-del knob"></div>
-                <h3>release</h3>
+          <section class="rack-row">
+            <div class="rack-element">
+              <h2>FILTERS</h2>
+              <div class="sub-rack">
+                <div class="rack-knob">
+                  <div id="lowpass" class="filter knob"></div>
+                  <h3>lowpass</h3>
+                </div>
+                <div class="rack-knob">
+                  <div id="highpass" class="filter knob"></div>
+                  <h3>highpass</h3>
+                </div>
               </div>
             </div>
-          </div>
-        </section>
 
-        <section class="audio-rack">
+            <div class="rack-element">
+              <h2>TIMING</h2>
+              <div class="sub-rack">
+                <div class="rack-knob">
+                  <div id="attack" class="att-del knob"></div>
+                  <h3>attack</h3>
+                </div>
+                <div class="rack-knob">
+                  <div id="release" class="att-del knob"></div>
+                  <h3>release</h3>
+                </div>
+              </div>
+            </div>
 
-          <div class="rack-element">
-            <h2>CHORUS</h2>
-            <div class="sub-rack">
+            <div class="rack-element">
+              <h2>DISTORTION</h2>
+              <div class="sub-rack">
+                <div class="rack-knob">
+                  <div id="dist" class="filter knob"></div>
+                  <h3>distortion</h3>
+                </div>
+                <div class="rack-knob">
+                  <div id="distWet" class="filter knob"></div>
+                  <h3>mix</h3>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="rack-row">
+            <div class="rack-element">
+              <h2>CHORUS</h2>
+              <div class="sub-rack">
               <div class="rack-knob">
                 <div id="chorusFreq" class="filter knob"></div>
                 <h3>frequency</h3>
@@ -151,6 +142,19 @@
             </div>
           </div>
 
+          <div class="rack-element">
+            <h2>REVERB</h2>
+            <div class="sub-rack">
+              <div class="rack-knob">
+                <div id="roomSize" class="filter knob"></div>
+                <h3>room size</h3>
+              </div>
+              <div class="rack-knob">
+                <div id="revWet" class="filter knob"></div>
+                <h3>mix</h3>
+              </div>
+            </div>
+          </div>
 
           <div class="rack-element">
             <h2>DELAY</h2>
@@ -169,42 +173,11 @@
               </div>
             </div>
           </div>
-
         </section>
+        </div><!--- Control Panel -->
 
-        <section class="audio-rack">
 
-          <div class="rack-element">
-            <h2>REVERB</h2>
-            <div class="sub-rack">
-              <div class="rack-knob">
-                <div id="roomSize" class="filter knob"></div>
-                <h3>room size</h3>
-              </div>
-              <div class="rack-knob">
-                <div id="revWet" class="filter knob"></div>
-                <h3>mix</h3>
-              </div>
-            </div>
-          </div>
-
-          <div class="rack-element">
-            <h2>DISTORTION</h2>
-            <div class="sub-rack">
-              <div class="rack-knob">
-                <div id="dist" class="filter knob"></div>
-                <h3>distortion</h3>
-              </div>
-              <div class="rack-knob">
-                <div id="distWet" class="filter knob"></div>
-                <h3>mix</h3>
-              </div>
-            </div>
-          </div>
-          
-        </section>
-
-      </div>
+      </div>  <!--- Synth Container -->
     </main>
 
     <footer>
