--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
           </div>
           <div id="oscilloscope" class="oscilloscope"></div>
           <div class="rack-element header-knob">
-            <h2>VOLUME</h2>
-            <div id="volume" class="volume knob"></div>
+            <h2>MAIN</h2>
+            <div class="eq sub-rack">
+              <div class="rack-knob">
+                <div id="volume" class="volume knob"></div>
+                <h3>volume</h3>
+              </div>
+              <div class="rack-knob">
+                <div id="bpm" class="bpm knob"></div>
+                <h3>bpm</h3>
+              </div>
+            </div>
           </div>
         </div>
 
