Adds dynamic functionality to the input fields.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     </header>
 
     <main>
-      <form class="name-input">
-        <input type="text" placeholder="Enter your name" value="" />
+      <form id="user-info" class="user-input">
+        <div class="name-input">
+          <input id="name" type="text" placeholder="Enter your name" />
+        </div>
+        <div class="date-input">
+          <input id="birthday" type="date" placeholder="Enter your name" />
+        </div>
         <button class="create-melody">Play my name!</button>
       </form>
 
