Makes synth only playable when mouse is over it.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="create-melody">Play my name!</button>
       </form>
 
-      <div class="synth-container">
+      <div id="synth" class="synth-container">
 
         <div class="synth-header">
           <div class="rack-element header-knob">
