Completes v1 of app.

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/master.css" />
     <link href="https://fonts.googleapis.com/css?family=Anton|Cabin|Shrikhand" rel="stylesheet">
-    <title>ME-75</title>
+    <title>Play My Name</title>
   </head>
   <body>
 
     <header>
       <h1>Play My Name</h1>
       <p class="instructions">Enter your name and birthday below to generate a
-      melody that is unique to you. The instrument is also playable by keyboard
-      while your mouse is inside of it. Have fun!</p>
+      melody that is unique to you. Morph your melody with all of the controls, and
+      change the octave with + or - on your keyboard. You can also play the instrument
+      using your keyboard when your mouse is inside of it. Have fun!</p>
     </header>
 
     <main>
@@ -202,12 +203,27 @@
         </section>
         </div><!--- Control Panel -->
 
-
       </div>  <!--- Synth Container -->
     </main>
 
     <footer>
+      <ul class="social-links">
+        <li class="github">
+          <a href="https://github.com/morgan-edwards">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+            GitHub
+          </a>
+        </li>
+        <li class="linkedin">
+          <a href="https://www.linkedin.com/in/morgan-edwards-04301876/">
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            LinkedIn
+          </a>
+        </li>
+      </ul>
+      <span class="copyright">&copy; 2018 Morgan Edwards</span>
       <script src="./scripts/bundle.js"></script>
+      <script src="https://use.fontawesome.com/92e15776b0.js"></script>
     </footer>
 
   </body>
